adicionando pagina de valuation

--- a/templates/base.html
+++ b/templates/base.html
@@ -382,6 +382,9 @@
                     <i class="bi bi-box-arrow-right"></i>
                 </a>
             </div>
+            <a href="{% url 'valuation' %}" class="btn btn-outline-light btn-sm">
+            <i class="bi bi-graph-up-arrow"></i> Valuation
+            </a>
             {% endif %}
         </div>
     </nav>
